<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/attachment"
        android:icon="@drawable/ic_action_attachment"
        android:title="@string/attachment"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/email"
        android:icon="@drawable/ic_action_email"
        android:title="@string/email"
        app:showAsAction="ifRoom"/>

</menu>